--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
+        "laravel-echo": "^1.6.1",
+        "laravel-echo-server": "^1.6.0",
         "react-router": "^5.1.2",
-        "react-router-dom": "^5.1.2"
+        "react-router-dom": "^5.1.2",
+        "socket.io-client": "^2.3.0"
     },
     "homepage": "http://homestead.test/main"
 }
